# MECH423-Final-Project-GUI

./: MECH423FinalProject.pyw  pyproject.toml
mech423_final_project_gui/window/: lab3_main_window.py
